--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "finchart",
   "version": "0.1.0",
+  "homepage": "/",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.0",
